--- a/clothes-project/.prettierrc.json
+++ b/clothes-project/.prettierrc.json
@@ -1,7 +1,5 @@
 {
   "trailingComma": "none",
   "tabWidth": 2,
-  "semi": false,
-  "singleQuote": true,
-  "trallingComma": "none"
+  "singleQuote": true
 }
