--- a/clothes-project/angular.json
+++ b/clothes-project/angular.json
@@ -6,7 +6,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "clothes-project": {
+    "shop-project": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/clothes-project",
+            "outputPath": "dist/shop-project",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -76,10 +76,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "clothes-project:build:production"
+              "browserTarget": "shop-project:build:production"
             },
             "development": {
-              "browserTarget": "clothes-project:build:development"
+              "browserTarget": "shop-project:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -87,7 +87,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "clothes-project:build"
+            "browserTarget": "shop-project:build"
           }
         },
         "test": {
@@ -113,5 +113,5 @@
       }
     }
   },
-  "defaultProject": "clothes-project"
+  "defaultProject": "shop-project"
 }
